[gd_scene load_steps=21 format=3 uid="uid://bcfnptef1mgeq"]

[ext_resource type="Script" uid="uid://bd8h4y3ghtrxg" path="res://Jugadores/player2.gd" id="1_4cor4"]
[ext_resource type="Script" uid="uid://d3fy0jipyxos1" path="res://Jugadores/player2_input_actions.gd" id="2_yuhi3"]
[ext_resource type="Script" uid="uid://dapnlmeaq3ikc" path="res://Jugadores/death.gd" id="3_plwar"]
[ext_resource type="Script" uid="uid://pvvoy4sdm2xk" path="res://Jugadores/facing.gd" id="3_vquue"]
[ext_resource type="Texture2D" uid="uid://c2q42hj4xd3gu" path="res://Sprites/player_tiger/prota tigre idle.png" id="5_plwar"]
[ext_resource type="Texture2D" uid="uid://vjkw6k15rhcu" path="res://Sprites/player_tiger/prota tigre mask idle.png" id="6_e1jsa"]
[ext_resource type="Script" uid="uid://dc8bui2smo84n" path="res://Jugadores/area_proteccion.gd" id="6_lo36t"]
[ext_resource type="Texture2D" uid="uid://betp85lmnit4x" path="res://Sprites/player_tiger/prota tigre walk1.png" id="7_e1jsa"]
[ext_resource type="Texture2D" uid="uid://yxsgeqdlof53" path="res://Sprites/player_tiger/prota tigre mask walk 3.png" id="8_udvhx"]
[ext_resource type="Texture2D" uid="uid://68bnxutmcx2e" path="res://Sprites/player_tiger/prota tigre walk 2.png" id="8_usn2r"]
[ext_resource type="Texture2D" uid="uid://8coxd5gt7odk" path="res://Sprites/player_tiger/prota tigre walk 3.png" id="9_uxml8"]
[ext_resource type="Texture2D" uid="uid://d26js7572qj5t" path="res://Sprites/player_tiger/prota tigre mask walk1.png" id="11_cq8na"]
[ext_resource type="Texture2D" uid="uid://bscj1d0msmai6" path="res://Sprites/player_tiger/prota tigre mask walk 2.png" id="12_7supb"]

[sub_resource type="Resource" id="Resource_x7rbu"]
script = ExtResource("2_yuhi3")
left = &"P2 Left"
right = &"P2 Right"
up = &"P2 Up"
down = &"P2 Down"
metadata/_custom_type_script = "uid://bqg2vwbe72ef7"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_udvhx"]
radius = 89.0
height = 377.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sweqy"]
radius = 88.0
height = 376.0

[sub_resource type="SpriteFrames" id="SpriteFrames_1jxqw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_plwar")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_e1jsa")
}],
"loop": true,
"name": &"idle mask",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_uxml8")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_udvhx")
}],
"loop": true,
"name": &"jumping mask",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_e1jsa")
}, {
"duration": 1.0,
"texture": ExtResource("8_usn2r")
}, {
"duration": 1.0,
"texture": ExtResource("9_uxml8")
}, {
"duration": 1.0,
"texture": ExtResource("8_usn2r")
}],
"loop": true,
"name": &"walking",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_cq8na")
}, {
"duration": 1.0,
"texture": ExtResource("12_7supb")
}, {
"duration": 1.0,
"texture": ExtResource("8_udvhx")
}, {
"duration": 1.0,
"texture": ExtResource("12_7supb")
}],
"loop": true,
"name": &"walking mask",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sweqy"]
radius = 216.083

[sub_resource type="Curve" id="Curve_plwar"]
_data = [Vector2(0.181818, 0.0674158), 0.0, 0.0, 0, 0, Vector2(0.505682, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_4wxsr"]
_limits = [0.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 200), 0.0, 0.0, 0, 0, Vector2(0.380682, 44.9438), 0.0, 0.0, 0, 0, Vector2(0.659091, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Player" type="CharacterBody2D" groups=["player2"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_4cor4")
actions = SubResource("Resource_x7rbu")
metadata/_custom_type_script = "uid://cqkmy8lbrods8"
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("3_plwar")

[node name="HurtArea" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_udvhx")

[node name="CollisionPlayer" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_sweqy")

[node name="Facing" type="Node2D" parent="."]
rotation = -3.14159
scale = Vector2(1, -1)
script = ExtResource("3_vquue")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Facing"]
position = Vector2(-102, 42.0003)
scale = Vector2(-0.794491, 0.794491)
sprite_frames = SubResource("SpriteFrames_1jxqw")
animation = &"idle"

[node name="AreaMask" type="Area2D" parent="."]
script = ExtResource("6_lo36t")

[node name="CollisionMask" type="CollisionShape2D" parent="AreaMask"]
shape = SubResource("CircleShape2D_sweqy")
disabled = true

[node name="Line2D" type="Line2D" parent="AreaMask"]
visible = false
points = PackedVector2Array(0, 0, 100, 100)
closed = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 150
one_shot = true
speed_scale = 20.0
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 103.06
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 20)
initial_velocity_min = 191.92
initial_velocity_max = 272.73
scale_amount_min = 5.0
scale_amount_max = 40.0
scale_amount_curve = SubResource("Curve_plwar")
color = Color(0.308869, 0.557353, 0.246415, 1)
anim_speed_curve = SubResource("Curve_4wxsr")

[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="Hurtbox" method="_on_body_entered"]
[connection signal="area_entered" from="AreaMask" to="AreaMask" method="_on_area_entered"]
[connection signal="area_exited" from="AreaMask" to="AreaMask" method="_on_area_exited"]
[connection signal="body_entered" from="AreaMask" to="AreaMask" method="_on_body_entered"]
